src/Services/adminServices/tdsServices/k8s/configmap.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tds-service
  labels:
    name: tds-service
