src/Services/adminServices/tdsServices/k8s/rbac.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tds-service
  labels:
    name: tds-service
    environment: production
