src/Services/adminServices/tdsServices/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tds-service
  namespace: tds-service
  labels:
    app: tds-service
spec:
  type: LoadBalancer
  selector:
    app: tds-service
  ports:
  - name: http
    port: 80
    targetPort: 5181
    protocol: TCP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
---
apiVersion: v1
kind: Service
metadata:
  name: tds-service-internal
  namespace: tds-service
  labels:
    app: tds-service
spec:
  type: ClusterIP
  selector:
    app: tds-service
  ports:
  - name: http
    port: 5181
    targetPort: 5181
    protocol: TCP
